--- a/fireworks.css
+++ b/fireworks.css
@@ -1,4 +1,15 @@
 body{
     background-color: black;
-    
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
 }
