--- a/fireworks.css
+++ b/fireworks.css
@@ -1,5 +1,19 @@
 body{
     background-color: black;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+canvas {
+    display: block;
+}
+
+@media (max-width: 768px) {
+    canvas {
+        width: 100vw !important;
+        height: 100vh !important;
+    }
 }
 
 .visually-hidden {
